@@ -7,6 +7,7 @@
 * VPos: Adding Panal Credit Card type [jherreraa] #4814
 * Stripe PI: Update parameters for creation of customer [almalee24] #4782
 * PaywayDotCom: update `live_url` [jcreiff] #4824
+* Stripe & Stripe PI: Update login key validation [almalee24] #4816
 
 == Version 1.131.0 (June 21, 2023)
 * Redsys: Add supported countries [jcreiff] #4811
